--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <title>Kitchen Kompanion</title>
+
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="root"></div>
